# TECHNICAL_ANALYZER

./: LICENSE  README.md  pyproject.toml
TECHNICAL_ANALYSIS/CANDLESTICK_ANALYZER/: candlestick_analyzer.py
TECHNICAL_ANALYSIS/CONFORMATION_INDICATOR/: conformation_indicator.py
TECHNICAL_ANALYSIS/CONSTANTS/: constants.py
TECHNICAL_ANALYSIS/TECHNICAL_ANALYSIS/: technical_analysis.py
