[build-system]
requires = ["setuptools<=64.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "technical_analyzer_P-Y-R-O-B-O-T"
version = "1.5.0"
description = "A MARKET ANALYSIS FRAMEWORK THAT USES TECHNICAL AND CANLDLESTICK INDICATORS"
readme = "README.md"
authors = [{name =  "KUSHAL", email = "NONE@NONE.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["technical",
			"analysis",
			"indicator",
			"candle",
			"stick",
			"candlestick",
			"market"]

[project.urls]
Homepage = "https://github.com/P-Y-R-O-B-O-T/TECHNICAL_ANALYZER"
